
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[v1.2.1]]
== 1.2.1 (22.11.2019)

icon:check[] Core: Mesh now uses a different parser for processing `*.docx` and `*.pptx` files. Parsing these files will now require far less memory.

icon:check[] GraphQL: Fixed fetching node references from users. link:https://github.com/gentics/mesh/issues/393[#393] link:https://github.com/gentics/mesh/issues/934[#934]

icon:check[] Java Rest Client: Fixed a bug that some generic methods would not allow response objects of any class.


[[v1.2.0]]
== 1.2.0 (20.11.2019)

WARNING: The internal database structure has changed significantly to avoid vertices with many edges. This will result in a higher write performance on bigger systems. For this change, the API of Gentics Mesh did not change at all. When starting with this version on an existing database, the structure changes will be applied automatically, which will take some time to complete.

CAUTION: If you are running Gentics Mesh in cluster mode, you need to link:{{< relref "clustering.asciidoc" >}}#_setup[initialize the cluster again]. You must use the `-initCluster` command line argument or set the `MESH_CLUSTER_INIT` to `true` on one of the master instances of the cluster.

icon:check[] Java Rest Client: Generic methods (`get`, `post`, `put`, `delete`) now allow response objects of any class.

icon:check[] UI: The UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/develop/CHANGELOG.md#110---2019-11-20[1.1.0].

[[v1.1.1]]
== 1.1.1 (11.11.2019)
